# ELEN4020_Lab2

./: .gitignore  CMakeLists.txt  README.md  lab2.cpp
docs/: ELEN4020_Lab_2_Report.bib
docs/html/: _matrix_8h.html  _matrix_8h_source.html  annotated.html  class_matrix-members.html  class_matrix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  lab2_8cpp.html  menudata.js  modules.html  namespaces.html  pages.html  searchdata.js  structmatrix__args.html  transpose_8cpp.html  transpose_8h.html  transpose_8h_source.html  utilities_8cpp.html  utilities_8h.html  utilities_8h_source.html
docs/html/search/: all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_c.js  all_e.js  classes_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  searchdata.js
docs/xml/: _matrix_8h.xml  class_matrix.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  lab2_8cpp.xml  namespacestd.xml  namespacestd_1_1chrono.xml  transpose_8cpp.xml  transpose_8h.xml  utilities_8cpp.xml  utilities_8h.xml
report/: ELEN4020_Lab_2_Report.bib  ELEN4020_Lab_2_Report.tex  latexmkrc
report/code/: Matrix.h  transpose.h  utilities.cpp
report/images/: asymptotic.eps  example.eps
report/tex/: appendices.tex  bibliography.tex  custom_commands.tex  examples.tex  packages.tex  title.tex
src/: Matrix.h  lab2.cpp  transpose.cpp  transpose.h  utilities.cpp  utilities.h
